2008-11-01	Brian Tarricone <bjt23@cornell.edu>

	* xfce4-session/main.c: Fix minor one-time memleak.

2008-11-01	Brian Tarricone <bjt23@cornell.edu>

	* xfce4-session/xfsm-manager.c: Watch for dbus disconnects and
	  be sure we aren't terminated.
	* xfce4-session/xfsm-{client,manager}.c: Manage the lifecycle of
	  the DBusGConnection reference; not strictly necessary, as it
	  should be a shared connection, but I like being correct.

2008-11-01	Brian Tarricone <bjt23@cornell.edu>

	* xfce4-session/xfsm-shutdown-helper.c: Use dbus-default method
	  call timeout (which appears to be 25 seconds) rather than hard-
	  coding 2 seconds.  Fix a possible crash if a possible (however
	  unlikely) error path is taken.

2008-11-01	Brian Tarricone <bjt23@cornell.edu>

	* *: Implement suspend/hibernate support using HAL.  Partial patch
	  from Michael Casadevall.
	* xfce4-session/shutdown.c: Add buttons for suspend/hibernate.
	* xfce4-session/xfsm-manager.c: Handle suspend and hibernate as
	  initiated from the dialog or over dbus.  Don't quit the SM
	  after a successful suspend/hibernate.  Show errors to the user
	  via dialog boxes rather than printfs to console.
	* xfce4-session/xfsm-shutdown-helper.[ch]: Call HAL Suspend and
	  Hibernate methods as appropriate.  Add a ton of error reporting
	  so callers can present hopefully-useful error messages to the
	  user.
	* icons/48x48/xfsm-{hibernate,suspend}.png: Add icons for the
	  suspend/hibernate buttons in the UI.

2008-11-01	Brian Tarricone <bjt23@cornell.edu>

	* engines/simple/simple.c: Use GtkFileChooserButton instead of
	  GtkEntry+GtkButton for selecting custom image in simple engine.

2008-11-01	Brian Tarricone <bjt23@cornell.edu>

	* xfce4-session/xfsm-global.c: Fix warning leading to crash on
	  amd64 due to missing include (bug 4510).

2008-10-31	Brian Tarricone <bjt23@cornell.edu>

	* configure.in.in,xfce4-session/xfsm-manager.c: Change the
	  detection of linux/ioprio.h, as the header is apparently