@@ -1,3 +1,8 @@
+2008-11-05	Brian Tarricone <bjt23@cornell.edu>
+
+	* xfce4-session/xfsm-manager.c: Ignore timeout errors from dbus
+	  when using HAL to suspend/hibernate.
+
 2008-11-01	Brian Tarricone <bjt23@cornell.edu>
 
 	* xfce4-session/main.c: Fix minor one-time memleak.
